# responsible-ai-toolkit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: credit_scoring_demo.py
rai_toolkit/: cli.py
rai_toolkit/audit/: trail.py
rai_toolkit/bias/: detector.py  metrics.py
rai_toolkit/model_card/: generator.py
rai_toolkit/model_card/templates/: model_card.md.j2
tests/: test_audit_trail.py  test_bias_detector.py  test_model_card.py
