[build-system]
requires = ["hatchling>=1.29"]
build-backend = "hatchling.build"

[project]
name = "rai-toolkit"
version = "0.1.0"
description = "Responsible AI framework for regulated financial institutions"
requires-python = ">=3.10"
dependencies = [
    "fairlearn>=0.13",
    "mlflow>=3.11",
    "click>=8.3",
    "jinja2>=3.1",
    "pydantic>=2.13",
    "loguru>=0.7",
    "scikit-learn>=1.8",
    "pandas>=2.2",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "pytest-cov>=6.1",
    "ruff>=0.11",
]
redteam = [
    "giskard>=2.15",
    "langchain-core>=0.3",
]

[project.scripts]
rai = "rai_toolkit.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["rai_toolkit/cli.py"]
